--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-@@include('./components/head.html', {'title': ''})
+	@@include('./components/head.html', {'title': ''})
 
-<body>
-    @@include('./components/header.html')
-    <main>
-        <!-- <div class="dropdown" data-dropdown>
+	<body>
+		@@include('./components/header.html')
+		<main>
+			<!-- <div class=
+		 "dropdown" data-dropdown>
             <button class="dropdown-button" data-dropdown-button>Dropdown</button>
             <div class="dropdown-menu">
                 <div class="dropdown-links">
@@ -21,10 +22,19 @@
                 Content 1
             </div>
         </div> -->
-    </main>
-    @@include('./components/footer.html')
 
-    <script src="js/app.min.js"></script>
-</body>
+			<div class="__container">
+				<div class="grid posts-grid">
+					@@include('./components/article.html')
+					@@include('./components/article.html')
+					@@include('./components/article.html')
+					@@include('./components/article.html')
+					@@include('./components/article.html')
+				</div>
+			</div>
+		</main>
+		@@include('./components/footer.html')
 
+		<script src="js/app.min.js"></script>
+	</body>
 </html>
