feat: aside menu components

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
         </div> -->
 
 			<div class="__container">
+				@@include('./components/aside-menu.html')
+			</div>
+			<div class="__container">
 				<div class="grid posts-grid">
 					@@include('./components/article.html')
 					@@include('./components/article.html')
