--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
 						<i></i>
 						<p>cna.md</p>
 					</a>
-					<button class='button button__yellow'>
+					<button class='button button__yellow newsletter__button'>
 						Abonează-te la newsletter
 						<i class='icon-bell'></i>
 					</button>
@@ -187,6 +187,8 @@
             </div>
         </div> -->
 	</main>
+	@@include('./components/newsletter-modal.html')
+
 	@@include('./components/footer.html')
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js"
@@ -210,7 +212,6 @@
 
 	</script>
 	<script src="js/app.min.js"></script>
-
 </body>
 
 </html>
