--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,7 @@
 	</main>
 	@@include('./components/newsletter-modal.html')
 
-	<!-- @@include('./components/footer.html') -->
+	@@include('./components/footer.html')
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js"
 		integrity="sha512-Ysw1DcK1P+uYLqprEAzNQJP+J4hTx4t/3X2nbVwszao8wD+9afLjBQYjz7Uk4ADP+Er++mJoScI42ueGtQOzEA=="
