fedotos(pages): team page

--- a/src/subcompartiment.html
+++ b/src/subcompartiment.html
@@ -4,28 +4,26 @@
 
 <body>
   @@include('./components/header.html')
-  <main>
-    <div class='subcompartiment'>
-      <div class="subcompartiment__container">
-        <a href='#' class='subcompartiment__button'>
-          Programe
-        </a>
-        <a href='#' class='subcompartiment__button'>
-          Platforma de implicare a experților din diaspora
-        </a>
-        <a href='#' class='subcompartiment__button'>
-          Investește acasă
-        </a>
-        <a href='#' class='subcompartiment__button'>
-          E-learning
-        </a>
-        <a href='#' class='subcompartiment__button'>
-          Implicare în proces decizional
-        </a>
-        <a href='#' class='subcompartiment__button'>
-          Lucrul cu punctele focale Diaspora Migrație Dezvoltare
-        </a>
-      </div>
+  <main class='subcompartiment'>
+    <div class="subcompartiment__container">
+      <a href='#' class='subcompartiment__button'>
+        Programe
+      </a>
+      <a href='#' class='subcompartiment__button'>
+        Platforma de implicare a experților din diaspora
+      </a>
+      <a href='#' class='subcompartiment__button'>
+        Investește acasă
+      </a>
+      <a href='#' class='subcompartiment__button'>
+        E-learning
+      </a>
+      <a href='#' class='subcompartiment__button'>
+        Implicare în proces decizional
+      </a>
+      <a href='#' class='subcompartiment__button'>
+        Lucrul cu punctele focale Diaspora Migrație Dezvoltare
+      </a>
     </div>
   </main>
   @@include('./components/footer.html')
