fedotos(pages): uncomment header

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 @@include('./components/head.html', {'title': ''})
 
 <body>
-	<!-- @@include('./components/header.html') -->
+	@@include('./components/header.html')
 	<main>
 		<section class='hero'>
 			<div class="header__container">
