feotos(pages): pages: articles, cards, team-single

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
 						<div class="hero-slider__slider">
 							<div class="slider-hero__body swiper">
 								<a href='#' class="slider-hero__slide">
-									<div class='slider-hero__slid§e--image'
-										style="background: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, #000000 100%), url('@img/hero.png') 50% 50% / cover no-repeat;"
-										onmouseover='liniarChanger(this, "@img/hero.png")'
-										onmouseout='liniarChangerOut(this, "@img/hero.png")'>
+									<div class='slider-hero__slide--image'
+										style="background: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, #000000 100%), url('@img/hero.jpeg') 50% 50% / cover no-repeat;"
+										onmouseover='liniarChanger(this, "@img/hero.jpeg")'
+										onmouseout='liniarChangerOut(this, "@img/hero.jpeg")'>
 									</div>
 									<div class='slider-hero__slide--body'>
 										<div class='hero__details'>
@@ -31,9 +31,9 @@
 								</a>
 								<a href='#' class="slider-hero__slide">
 									<div class='slider-hero__slide--image'
-										style="background: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, #000000 100%), url('@img/hero.png') 50% 50% / cover no-repeat;"
-										onmouseover='liniarChanger(this, "@img/hero.png")'
-										onmouseout='liniarChangerOut(this, "@img/hero.png")'>
+										style="background: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, #000000 100%), url('@img/hero.jpeg') 50% 50% / cover no-repeat;"
+										onmouseover='liniarChanger(this, "@img/hero.jpeg")'
+										onmouseout='liniarChangerOut(this, "@img/hero.jpeg")'>
 									</div>
 									<div class='slider-hero__slide--body'>
 										<div class='hero__details'>
