fedotos(pages): components - link, cards, guide-card

--- a/src/articles.html
+++ b/src/articles.html
@@ -23,10 +23,7 @@
             Anunțuri
           </a>
         </div>
-        <form action='#' class="search">
-          <img src="@img/icons/search.svg" alt="search">
-          <input type="text" placeholder='Aici poți căuta ce ai nevoie'>
-        </form>
+        @@include('./components/search.html')
         <div class="years">
           <a href='#' class='years-button underline-effect'>
             2024
