--- a/src/cards.html
+++ b/src/cards.html
@@ -4,8 +4,8 @@
 
 <body>
   @@include('./components/header.html')
-  <main class='cards '>
-    <div class='cards__container page-grid'>
+  <main>
+    <div class='__container page-grid'>
       @@include('./components/aside-menu.html')
       <div class='cards-grid'>
         @@include('./components/card.html')
