--- a/src/index.html
+++ b/src/index.html
@@ -100,41 +100,41 @@
 						@@include('./components/article.html')
 					</div>
 				</div>
-				<aside class='links'>
+				<aside class='aside-links'>
 					<h4>Link-uri</h4>
-					<a href="#" class='links-item'>
+					<a href="#" class='aside-links__item' data-icon>
 						<i></i>
 						<p>Profesioniști din Diasporă pentru Dezvoltare</p>
 					</a>
-					<a href="#" class='links-item'>
+					<a href="#" class='aside-links__item' data-icon>
 						<i></i>
 						<p>Istorii de succes</p>
 					</a>
-					<a href="#" class='links-item'>
+					<a href="#" class='aside-links__item' data-icon>
 						<i></i>
 						<p>Despre tabara DOR</p>
 					</a>
-					<a href="#" class='links-item'>
+					<a href="#" class='aside-links__item' data-icon>
 						<i></i>
 						<p>Diaspora acasă reușește</p>
 					</a>
-					<a href="#" class='links-item'>
+					<a href="#" class='aside-links__item' data-icon>
 						<i></i>
 						<p>Diaspora engagement hub</p>
 					</a>
-					<a href="emoldovata.gov.xlsx" class='links-item'>
+					<a href="emoldovata.gov.xlsx" class='aside-links__item' data-icon>
 						<i></i>
 						<p>emoldovata.gov.md</p>
 					</a>
-					<a href="moldova.md" class='links-item'>
+					<a href="moldova.md" class='aside-links__item' data-icon>
 						<i></i>
 						<p>moldova.md</p>
 					</a>
-					<a href="presedinte.pdf" class='links-item'>
+					<a href="presedinte.pdf" class='aside-links__item' data-icon>
 						<i></i>
 						<p>presedinte.md</p>
 					</a>
-					<a href="cna.docx" class='links-item'>
+					<a href="cna.docx" class='aside-links__item' data-icon>
 						<i></i>
 						<p>cna.md</p>
 					</a>
