--- a/src/team-single.html
+++ b/src/team-single.html
@@ -4,8 +4,8 @@
 
 <body>
   <!-- @@include('./components/header.html') -->
-  <main class='team-single'>
-    <div class="page-grid team-single__container">
+  <main>
+    <div class="__container page-grid">
       @@include('./components/aside-menu.html')
       <div>
         <div class="page-title">
