--- a/src/team.html
+++ b/src/team.html
@@ -3,41 +3,41 @@
 @@include('./components/head.html', {'title': ''})
 
 <body>
-  <!-- @@include('./components/header.html') -->
-  <main class='team'>
-    <div class="team__container page-grid">
+  @@include('./components/header.html')
+  <main>
+    <div class="__container page-grid">
       @@include('./components/aside-menu.html')
-      <div class='team__body grid'>
-        <div class="team__item">
-          <img src="@img/images/team.png" alt="team">
+      <div class='team'>
+        <a href='#' class="team__item">
+          <img src="@img/images/violina.png" alt="team">
           <h5>Donu Violina</h5>
           <p>Șef BRD</p>
-        </div>
-        <div class="team__item">
-          <img src="@img/images/team.png" alt="team">
+        </a>
+        <a href='#' class="team__item">
+          <img src="@img/images/violina.png" alt="team">
           <h5>Donu Violina</h5>
           <p>Șef BRD</p>
-        </div>
-        <div class="team__item">
-          <img src="@img/images/team.png" alt="team">
+        </a>
+        <a href='#' class="team__item">
+          <img src="@img/images/violina.png" alt="team">
           <h5>Donu Violina</h5>
           <p>Șef BRD</p>
-        </div>
-        <div class="team__item">
-          <img src="@img/images/team.png" alt="team">
+        </a>
+        <a href='#' class="team__item">
+          <img src="@img/images/violina.png" alt="team">
           <h5>Donu Violina</h5>
           <p>Șef BRD</p>
-        </div>
-        <div class="team__item">
-          <img src="@img/images/team.png" alt="team">
+        </a>
+        <a href='#' class="team__item">
+          <img src="@img/images/violina.png" alt="team">
           <h5>Donu Violina</h5>
           <p>Șef BRD</p>
-        </div>
-        <div class="team__item">
-          <img src="@img/images/team.png" alt="team">
+        </a>
+        <a href='#' class="team__item">
+          <img src="@img/images/violina.png" alt="team">
           <h5>Donu Violina</h5>
           <p>Șef BRD</p>
-        </div>
+        </a>
       </div>
     </div>
   </main>
