--- a/src/links.html
+++ b/src/links.html
@@ -3,7 +3,7 @@
 @@include('./components/head.html', {'title': ''})
 
 <body>
-  @@include('./components/header.html')
+  <!-- @@include('./components/header.html') -->
   <main>
     <div class="__container page-grid">
       @@include('./components/aside-menu.html')
@@ -57,6 +57,8 @@
               <p>raport_anual_brd_2023.pdf</p>
             </div>
           </a>
+
+          @@include('./components/pagination.html')
         </div>
       </div>
     </div>
