fedotos(pages): pagination adaptiv

--- a/src/links.html
+++ b/src/links.html
@@ -3,7 +3,7 @@
 @@include('./components/head.html', {'title': ''})
 
 <body>
-  <!-- @@include('./components/header.html') -->
+  @@include('./components/header.html')
   <main>
     <div class="__container page-grid">
       @@include('./components/aside-menu.html')
