--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 							<div class="slider-hero__body swiper">
 								<a href='#' class="slider-hero__slide">
 									<div class='slider-hero__slide--image'
-										style="background: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, #000000 100%), url('@img/hero.jpeg') 50% 50% / cover no-repeat;"
+										style="background: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.6) 100%), url('@img/hero.jpeg') 50% 50% / cover no-repeat;"
 										onmouseover='liniarChanger(this, "@img/hero.jpeg")'
 										onmouseout='liniarChangerOut(this, "@img/hero.jpeg")'>
 									</div>
@@ -88,7 +88,7 @@
 		<section class='media'>
 			<div class="media__container">
 				<div class='media__body'>
-					<a href='#' class='section-title'>
+					<a href='#' class='media__title'>
 						<h4>Media</h4>
 						<i class='icon-arrow-right'></i>
 					</a>
@@ -138,7 +138,7 @@
 						<i></i>
 						<p>cna.md</p>
 					</a>
-					<button class='button button__yellow newsletter__button'>
+					<button class='button button__yellow' id='modal-button'>
 						Abonează-te la newsletter
 						<i class='icon-bell'></i>
 					</button>
