--- a/src/404.html
+++ b/src/404.html
@@ -3,7 +3,7 @@
 @@include('./components/head.html', {'title': '404'})
 
 <body>
-  @@include('./components/header.html')
+  <!-- @@include('./components/header.html') -->
   <main>
     <div class="not-found __container">
       <img src="@img/404.svg" alt="404">
@@ -20,10 +20,10 @@
         <a href="#">„Steaua fără nume” a lui Mihail Sebastian a vegheat drumul spre casă al spectatorilor de la
           Paris
         </a>
-        <button class='button button__outline'>
+        <a href='#' class='button button__outline'>
           Înapoi acasă
           <i class="icon-arrow-right"></i>
-        </button>
+        </a>
       </div>
     </div>
   </main>
