pages(fedotos): styles fixes

--- a/src/subcompartiment.html
+++ b/src/subcompartiment.html
@@ -3,7 +3,7 @@
 @@include('./components/head.html', {'title': ''})
 
 <body>
-  @@include('./components/header.html')
+  <!-- @@include('./components/header.html') -->
   <main class='subcompartiment'>
     <div class="subcompartiment__container">
       <a href='#' class='subcompartiment__button'>
