--- a/src/team.html
+++ b/src/team.html
@@ -7,7 +7,7 @@
   <main>
     <div class="__container page-grid">
       @@include('./components/aside-menu.html')
-      <div class='team'>
+      <div class='team border-rounded'>
         <a href='#' class="team__item">
           <img src="@img/images/violina.png" alt="team">
           <h5>Donu Violina</h5>
