not result search

--- a/src/search.html
+++ b/src/search.html
@@ -10,13 +10,85 @@
         <h2>Rezultatul căutării</h2>
         <p>Am găsit 2 elemente pentru <span>«nouă»</span></p>
       </div>
-      <div class="posts-grid __container search-posts">
-        @@include('./components/article.html')
-        @@include('./components/article.html')
-        @@include('./components/article.html')
-        @@include('./components/article.html')
-        @@include('./components/article.html')
+      <div class='no-results'>
+        <h2>
+          NU A FOST GĂSIT NIMIC PENTRU <span>«nouă»</span>
+        </h2>
       </div>
+      <!-- <div class="search__container full-content">
+        <div class='search-articles search-spacing'>
+          <h4>Articole</h4>
+          <div class='posts-grid'>
+            @@include('./components/article.html')
+            @@include('./components/article.html')
+            @@include('./components/article.html')
+            @@include('./components/article.html')
+            @@include('./components/article.html')
+          </div>
+        </div>
+        <div class="search-links search-spacing">
+          <h4>Linkuri</h4>
+          <div class='links'>
+            <a href='raport_anual_brd_2023.docx' class="links-item" data-icon>
+              <p class='links-item__title'>Raport de activitate Biroul relații cu diaspora pentru anul 2023</p>
+              <div class='links-item__details'>
+                <i></i>
+                <p>raport_anual_brd_2023.pdf</p>
+              </div>
+            </a>
+            <a href='raport_anual_brd_2023.docx' class="links-item" data-icon>
+              <p class='links-item__title'>Raport de activitate Biroul relații cu diaspora pentru anul 2023</p>
+              <div class='links-item__details'>
+                <i></i>
+                <p>raport_anual_brd_2023.pdf</p>
+              </div>
+            </a>
+            <a href='raport_anual_brd_2023.docx' class="links-item" data-icon>
+              <p class='links-item__title'>Raport de activitate Biroul relații cu diaspora pentru anul 2023</p>
+              <div class='links-item__details'>
+                <i></i>
+                <p>raport_anual_brd_2023.pdf</p>
+              </div>
+            </a>
+            <a href='raport_anual_brd_2023.docx' class="links-item" data-icon>
+              <p class='links-item__title'>Raport de activitate Biroul relații cu diaspora pentru anul 2023</p>
+              <div class='links-item__details'>
+                <i></i>
+                <p>raport_anual_brd_2023.pdf</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="search-subcategories search-spacing">
+          <h4>Subcategorii</h4>
+          <div class='cards-grid'>
+            @@include('./components/card.html')
+            @@include('./components/card.html')
+            @@include('./components/card.html')
+          </div>
+        </div>
+        <div class="search-team">
+          <h4>Personal</h4>
+          <div class='team'>
+            <a href='#' class="team__item">
+              <img src="@img/images/violina.png" alt="team">
+              <h5>Donu Violina</h5>
+              <p>Șef BRD</p>
+            </a>
+            <a href='#' class="team__item">
+              <img src="@img/images/violina.png" alt="team">
+              <h5>Donu Violina</h5>
+              <p>Șef BRD</p>
+            </a>
+            <a href='#' class="team__item">
+              <img src="@img/images/violina.png" alt="team">
+              <h5>Donu Violina</h5>
+              <p>Șef BRD</p>
+            </a>
+
+          </div>
+        </div>
+      </div> -->
     </div>
   </main>
   @@include('./components/footer.html')
