--- a/src/program-single.html
+++ b/src/program-single.html
@@ -12,7 +12,12 @@
           <h4>Zilele Diasporei</h4>
         </div>
         @@include('./components/years.html')
-        <div class='program-single__body'>
+        <div class='not-found'>
+          <h4>
+            NU A FOST GĂSIT NIMIC PENTRU <span>«Zilele Diasporei»</span>
+          </h4>
+        </div>
+        <!-- <div class='program-single__body'>
           <img class='program-single__thumbnail' src="@img/images/zilele-diasporei.png" alt="zilele diasporei">
           <div class="program-single__content">
 
@@ -74,9 +79,6 @@
                   <div
                     class="wp-block-group__inner-container is-layout-constrained wp-block-group-is-layout-constrained">
                     <p class="link-title">Agenda proiect a Zilelor Diasporei 2018</p>
-
-
-
                     <div class="wp-block-file link"><i class="icon-pdf"><span class="path1"></span><span
                           class="path2"></span><span class="path3"></span><span class="path4"></span><span
                           class="path5"></span><span class="path6"></span><span class="path7"></span><span
@@ -153,9 +155,10 @@
               </div>
             </a>
           </div> -->
-              </div>
-            </div>
-          </div>
+      </div>
+    </div>
+    </div>
+    </div>
   </main>
   @@include('./components/footer.html')
 
